Small solver update
Doesn't work yet but there's progress. Will work on it again tomorrow

--- a/src/Solver.ipynb
+++ b/src/Solver.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "20b343c4",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 280,
    "id": "725623c4",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
     "# maybe a more systematic approach would be better.\n",
     "# just trying things out for now.\n",
     "class Model():\n",
-    "    def __init__(self, worlds=None, agents=None,\n",
+    "    def __init__(self, worlds: list = None, agents: list = None,\n",
     "                 relations=None, valuations=None):\n",
     "        self.worlds = worlds\n",
     "        self.agents = agents\n",
@@ -53,14 +53,14 @@
     "        if self.worlds is None:\n",
     "            self.create_worlds()\n",
     "\n",
-    "    def create_worlds(self, max: int = 12):\n",
+    "    def create_worlds(self, max: int = 20):\n",
     "        # generate a random number of worlds\n",
     "        self.worlds = []\n",
     "        for i in range(randint(1, max + 1)):\n",
     "            self.worlds.append(f\"w{i}\")\n",
     "        return self.worlds\n",
     "\n",
-    "    def create_agents(self, max: int = 12):\n",
+    "    def create_agents(self, max: int = 26):\n",
     "        # generate a random number of agents\n",
     "        self.agents = []\n",
     "        for i in range(randint(1, max + 1)):\n",
@@ -81,6 +81,7 @@
     "                self.relations[a][world] = {w for w in self.worlds\n",
     "                                            if w == world\n",
     "                                            or randint(0, 10) < 5}\n",
+    "        # print(self.relations)\n",
     "        return self.relations\n",
     "\n",
     "    def create_valuations(self, max: int = 3):\n",
@@ -93,29 +94,55 @@
     "        for atom in atoms:\n",
     "            self.valuations[atom] = {w for w in self.worlds\n",
     "                                     if randint(0, 10) < 5}\n",
+    "        # print(self.valuations)\n",
     "        return self.valuations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 281,
    "id": "b73cc13e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_formula(model: Model) -> str:\n",
+    "def create_formula(model: Model, ldepth:int = 0, hdepth:int = 12) -> str:\n",
     "    formula = \"\"\n",
     "\n",
-    "    for _ in range(randint(1,12)):\n",
+    "    for _ in range(randint(1,hdepth)):\n",
+    "        if randint(5) == 1:\n",
+    "            formula += '!'\n",
     "        formula += \"K\" + choice(model.agents)\n",
-    "    formula += choice(list(model.valuations.keys()))\n",
+    "    if True: #randint(10) != 1:\n",
+    "        if randint(5) == 1:\n",
+    "            formula += '!'\n",
+    "        formula += choice(list(model.valuations.keys()))\n",
+    "    else: \n",
+    "        formula += '(' + create_formula(model) + \")&(\" + create_formula(model) + ')'\n",
     "\n",
-    "    return formula"
+    "    return formula "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 272,
+   "id": "ca597fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KAKAKAp\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(create_formula(model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3fd94664",
    "metadata": {},
    "outputs": [],
@@ -138,14 +165,37 @@
     "        self.r = model.relations if model.relations else model.create_relations()\n",
     "        self.v = model.valuations if model.valuations else model.create_valuations()\n",
     "        self.talks = verbose\n",
+    "        print(self.talks)\n",
     "\n",
     "    def eval_formula(self, formula, world):\n",
-    "        if formula[0] == \"p\":\n",
-    "            return world in self.v.get(\"p\", set())\n",
+    "        \"\"\"maybe hashmap this to be more efficient also it seems like its broken...\"\"\"\n",
+    "        if formula[0] in self.v:\n",
+    "            # print(world, formula[0], world in self.v.get(formula[0], set())) \n",
+    "            return world in self.v.get(formula[0], set())\n",
     "        if formula[0] == \"K\":\n",
     "            agent, sub_formula = formula[1], formula[2:]\n",
     "            return all(self.eval_formula(sub_formula, connected_world)\n",
     "                       for connected_world in self.r[agent][world])\n",
+    "        if formula[0] == \"!\":\n",
+    "            print('not', formula[1:])\n",
+    "            return not(self.eval_formula(formula[1:], world))\n",
+    "        if formula[0] == \"(\":\n",
+    "            sub_forms = self.parse_brackets(formula)\n",
+    "            this_bracket = [sub_formula for i, sub_formula in sub_forms if i == 0]\n",
+    "            return all(self.eval_formula(sub_formula, world) \n",
+    "                    for sub_formula in this_bracket)\n",
+    "\n",
+    "\n",
+    "    def parse_brackets(self, string):\n",
+    "        # Copied from Gareth Rees on stackOverflow\n",
+    "        stack = []\n",
+    "        for i, c in enumerate(string):\n",
+    "            if c == '(':\n",
+    "                stack.append(i)\n",
+    "            elif c == ')' and stack:\n",
+    "                start = stack.pop()\n",
+    "                yield (len(stack), string[start + 1: i])\n",
+    "\n",
     "\n",
     "    def satisfying_worlds(self):\n",
     "        return {w for w in self.w if self.eval_formula(self.start, w)}\n",
@@ -159,11 +209,11 @@
     "        while True:\n",
     "            ws = self.satisfying_worlds()\n",
     "\n",
-    "            # print(f\"\\nToM level {self.level}\")\n",
     "            if self.talks:\n",
     "                print(\"\\n\")\n",
     "                print(\"Formula:\", self.f)\n",
     "                print(\"Possible worlds:\", ws)\n",
+    "            \n",
     "\n",
     "            if not ws:\n",
     "                if self.talks:\n",
@@ -175,13 +225,18 @@
     "                    print(\"→ unique world:\", ans)\n",
     "                answers.append(ans)\n",
     "            else:\n",
-    "                p_vals = {self.eval_formula((\"p\",), w) for w in ws}\n",
+    "                answer = []\n",
+    "                print(self.v)\n",
+    "                for atom in self.v:\n",
+    "                    truths = [w in self.v[atom] for w in ws]\n",
+    "                    if all(truths):\n",
+    "                        answer.append(atom)\n",
+    "                    elif not(any(truths)):\n",
+    "                        answer.append(f\"!{atom}\")\n",
+    "                # p_vals = {self.eval_formula((\"p\",), w) for w in ws}\n",
     "                if self.talks:\n",
-    "                    if len(p_vals) == 1:\n",
-    "                        print(\"→ p is known =\", p_vals.pop())\n",
-    "                    else:\n",
-    "                        print(\"→ no unique outcome\")\n",
-    "                answers.append(None)\n",
+    "                    print(f\"My answer is → {', '.join(answer)}\")\n",
+    "                answers.append(\", \".join(answer))\n",
     "\n",
     "            if self.f[0] != \"K\":\n",
     "                break\n",
@@ -190,8 +245,9 @@
     "            self.level += 1\n",
     "\n",
     "        unique_answers = [a for a in answers if a is not None]\n",
-    "        if (len(unique_answers) == len(set(unique_answers))\n",
-    "                and len(unique_answers) == len(answers)):\n",
+    "        # if (len(unique_answers) == len(set(unique_answers))\n",
+    "        #         and len(unique_answers) == len(answers)):\n",
+    "        if len(answers) != 0 and len(answers) == len(set(answers)):\n",
     "            print(\"\\nUnique different answer found for each K operator removed.\")\n",
     "            print(\"Formula:\", self.start)\n",
     "            print(\"worlds:\", self.w)\n",
@@ -211,29 +267,102 @@
    "source": [
     "To Do: \n",
     "- make sure model x formula combinations aren't repeated?\n",
-    "- add support for not in the formula generator and solver"
+    "- generate better random search. this is a mess currently."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b84de7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    model = Model()\n",
+    "    formula = create_formula(model)\n",
+    "    if Solver(formula, model).analyze():\n",
+    "        print(model, formula)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45749dfc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...................................................................................................."
+      "8\n",
+      "True\n",
+      "\n",
+      "\n",
+      "Formula: KB!q\n",
+      "Possible worlds: {'w1', 'w0'}\n",
+      "{'p': {'w1', 'w0'}, 'q': {'w0'}}\n",
+      "My answer is → p\n",
+      "\n",
+      "\n",
+      "Formula: !q\n",
+      "Possible worlds: {'w1', 'w0'}\n",
+      "{'p': {'w1', 'w0'}, 'q': {'w0'}}\n",
+      "My answer is → p\n",
+      "."
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(100):\n",
-    "    model = Model()\n",
-    "    formula = create_formula(model)\n",
-    "    if Solver(formula, model).analyze():\n",
-    "        print(model, formula)\n"
+    "form = 'KB!q'\n",
+    "rel = {'A': {'w0': {'w0', 'w1'}, 'w1': {'w0', 'w1'}}, 'B':{'w0': {}, 'w1': {}}}\n",
+    "val = {'p': {'w0', 'w1'}, 'q': {'w0'}}\n",
+    "agents = ['A', 'B']\n",
+    "wor = ['w0', 'w1']\n",
+    "\n",
+    "print(eval(\"(1+1) * 4\"))\n",
+    "\n",
+    "Solver(form, Model(wor, agents, rel, val), True).analyze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "e1c56dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KA(KAp)&(KAp)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "print(create_formula(model))\n",
+    "re.findall(r\"\\((.*?)\\)\", create_formula(model))"
    ]
   }
  ],
