--- a/src/Solver.ipynb
+++ b/src/Solver.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "725623c4",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
     "            self.agents.append(chr(ord('A')+i))\n",
     "        return self.agents\n",
     "\n",
-    "    def create_relations(self) -> Dict[str, Dict[str, str]]:\n",
+    "    def create_relations(self) -> Dict[str, Dict[str, set[str]]]:\n",
     "        \"\"\"\n",
     "        generate a random number of relations for each agent and each world. \n",
     "        These relations follow S5 rules.\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b73cc13e",
    "metadata": {},
    "outputs": [],
@@ -294,6 +294,7 @@
     "                yield (len(stack), string[start + 1: i])    # Return the depth and content of each bracket\n",
     "\n",
     "    def _satisfying_worlds(self):\n",
+    "        # Find all worlds remaining after the product\n",
     "        return [w for w in self.model.worlds if self._eval_formula(self.f, w)]\n",
     "\n",
     "    def _strip_outer_K(self):\n",
@@ -355,9 +356,8 @@
     "            # If there's no more K-operators to remove, stop the loop\n",
     "            if not self._strip_outer_K():\n",
     "                break\n",
-    "        # unique_answers = [a for a in answers if a is not None]\n",
-    "        # if (len(unique_answers) == len(set(unique_answers))\n",
-    "        #         and len(unique_answers) == len(answers)):\n",
+    "\n",
+    "        # If a satisfactory riddle was found, print this and return True\n",
     "        if len(answers) != 0 and len(answers) == len(set(answers)):\n",
     "            print(\"\\nUnique different answer found for each K operator removed.\")\n",
     "            print(\"Formula:\", self.start)\n",
@@ -394,14 +394,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Have not found a satisfying riddle within 90 tries.\n"
+      "\n",
+      "\n",
+      "Formula: !KAKAKAKAKBd\n",
+      "Possible worlds: ['w0', 'w1', 'w2', 'w3', 'w4', 'w5', 'w6', 'w7', 'w8', 'w9', 'w10', 'w11', 'w12', 'w13', 'w14', 'w15', 'w16', 'w17', 'w18', 'w19']\n",
+      "My answer is → a?, b?, c?, d?, e?, f?, g?, h?, i?\n",
+      "\n",
+      "\n",
+      "Formula: KAKAKAKBd\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KAKAKBd\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KAKBd\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KBd\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: d\n",
+      "Possible worlds: ['w0', 'w2', 'w3', 'w4', 'w5', 'w7', 'w8', 'w9', 'w12', 'w13', 'w18']\n",
+      "My answer is → a?, b?, c?, d, e?, f?, g?, h?, i?\n",
+      "\t\tNo unique different answer found for each K operator removed.\n",
+      "\n",
+      "\n",
+      "Formula: KCKDKAKBKBKBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KDKAKBKBKBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KAKBKBKBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KBKBKBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KBKBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KBKCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KCKDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KDKCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KCKA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: KA(a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\n",
+      "\n",
+      "Formula: (a)&(KD!c)\n",
+      "Possible worlds: []\n",
+      "→ inconsistent announcement\n",
+      "\t\tNo unique different answer found for each K operator removed.\n",
+      "Have not found a satisfying riddle within 2 tries.\n"
      ]
     }
    ],
    "source": [
-    "# Iterate over, in this case, 90 tries\n",
+    "# Iterate over, in this case, 2 tries\n",
     "found = False\n",
-    "for i in range(tries := 90):\n",
+    "for i in range(tries := 2):\n",
     "    # Keep track of tried combinations\n",
     "    tried_combinations = {}\n",
     "    # create a new model and announcement\n",
@@ -410,14 +497,14 @@
     "    # See if this combination of model and announcement gets us a satisfying riddle\n",
     "    if (formula, model) not in tried_combinations.items():\n",
     "        tried_combinations.setdefault(formula, []).append(model)\n",
-    "        found = Solver(formula, model).find_riddle()\n",
+    "        found = Solver(formula, model, True).find_riddle()\n",
     "if not found:\n",
     "    print(\"Have not found a satisfying riddle within\", tries, \"tries.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "45749dfc",
    "metadata": {},
    "outputs": [
@@ -426,8 +513,8 @@
      "output_type": "stream",
      "text": [
       "Finished loading tried_combinations.pickle\n",
-      "Solver stopped by user after 3785 tries.\n",
-      "Of those, 216/3785 were unique.\n",
+      "Solver stopped by user after 19989 tries.\n",
+      "Of those, 0/19989 were unique.\n",
       "Tried combinations were written to the file tried_combinations.pickle.\n"
      ]
     }
@@ -471,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
